<resources>
    <string name="app_name">Time Turtle</string>
    <string name="task_event">Task/Event</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="add">Add</string>
    <string name="drawer_opened">Drawer Opened</string>
    <string name="drawer_closed">Drawer Closed</string>
    <string name="action_share">Export</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_task">Add Task</string>
    <string name="addTaskException">Please add a name and a date to create a new task</string>
    <string name="addTaskSuccess">Task added!</string>
    <string name="this_is_the_description_of_the_event">This is the description of the event</string>
    <string name="_7_00">7:00</string>
    <string name="_26">26</string>
    <string name="home">Home</string>
    <string name="add_new_task">Add new task</string>
    <string name="settings">Settings</string>
    <string name="delete_cache">Delete Cache</string>
    <string name="task_name">Task Name</string>
    <string name="description">Description</string>
    <string name="select_time">Select Time</string>
    <string name="select_date">Select Date</string>
</resources>



