<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="125dp"
    android:layout_margin="16dp"
    android:background="?attr/colorOnPrimary"
    app:cardCornerRadius="15dp"
    app:elevation="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/_7_00"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="?attr/colorOnSecondary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/icon" />

        <TextView
            android:id="@+id/task_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/task_event"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="?attr/colorOnSecondary"
            app:layout_constraintTop_toBottomOf="@+id/time"
            app:layout_constraintStart_toStartOf="parent"
             />


        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/turtle"
            android:layout_margin="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"></ImageView>

        <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginVertical="5dp"
            android:hint="@string/this_is_the_description_of_the_event"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="?attr/colorOnSecondary"
            app:layout_constraintTop_toBottomOf="@+id/task_text"
            app:layout_constraintStart_toStartOf="parent"
             />



    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>